так пока cli работает со всеми командами. сделал тесты по agent. осталось сделать удобный запуск и ещё раз протестить руками а не кодом
